add AddApplicationDeviceToMulticastGroup
