# js/as/external/api/multicastGroup_pb.js
@@ -12,6 +12,7 @@ var global = Function('return this')();
 var google_api_annotations_pb = require('../../../google/api/annotations_pb.js');
 var google_protobuf_timestamp_pb = require('google-protobuf/google/protobuf/timestamp_pb.js');
 var google_protobuf_empty_pb = require('google-protobuf/google/protobuf/empty_pb.js');
+goog.exportSymbol('proto.api.AddApplicationDeviceToMulticastGroupRequest', null, global);
 goog.exportSymbol('proto.api.AddDeviceToMulticastGroupRequest', null, global);
 goog.exportSymbol('proto.api.CreateMulticastGroupRequest', null, global);
 goog.exportSymbol('proto.api.CreateMulticastGroupResponse', null, global);
@@ -1937,6 +1938,234 @@ proto.api.AddDeviceToMulticastGroupRequest.prototype.setDevEuisList = function(v
 
 proto.api.AddDeviceToMulticastGroupRequest.prototype.clearDevEuisList = function() {
   jspb.Message.setField(this, 2, []);
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, proto.api.AddApplicationDeviceToMulticastGroupRequest.repeatedFields_, null);
+};
+goog.inherits(proto.api.AddApplicationDeviceToMulticastGroupRequest, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.AddApplicationDeviceToMulticastGroupRequest.displayName = 'proto.api.AddApplicationDeviceToMulticastGroupRequest';
+}
+/**
+ * List of repeated fields within this message type.
+ * @private {!Array<number>}
+ * @const
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.repeatedFields_ = [3];
+
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.AddApplicationDeviceToMulticastGroupRequest.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.AddApplicationDeviceToMulticastGroupRequest} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    multicastGroupId: msg.getMulticastGroupId(),
+    applicationId: msg.getApplicationId(),
+    devEuisList: jspb.Message.getField(msg, 3)
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.AddApplicationDeviceToMulticastGroupRequest}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.AddApplicationDeviceToMulticastGroupRequest;
+  return proto.api.AddApplicationDeviceToMulticastGroupRequest.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.AddApplicationDeviceToMulticastGroupRequest} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.AddApplicationDeviceToMulticastGroupRequest}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setMulticastGroupId(value);
+      break;
+    case 2:
+      var value = /** @type {number} */ (reader.readInt64());
+      msg.setApplicationId(value);
+      break;
+    case 3:
+      var value = /** @type {string} */ (reader.readString());
+      msg.getDevEuisList().push(value);
+      msg.setDevEuisList(msg.getDevEuisList());
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.AddApplicationDeviceToMulticastGroupRequest} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getMulticastGroupId();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+  f = this.getApplicationId();
+  if (f !== 0) {
+    writer.writeInt64(
+      2,
+      f
+    );
+  }
+  f = this.getDevEuisList();
+  if (f.length > 0) {
+    writer.writeRepeatedString(
+      3,
+      f
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.AddApplicationDeviceToMulticastGroupRequest} The clone.
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.AddApplicationDeviceToMulticastGroupRequest} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string multicast_group_id = 1;
+ * @return {string}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.getMulticastGroupId = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.setMulticastGroupId = function(value) {
+  jspb.Message.setField(this, 1, value);
+};
+
+
+/**
+ * optional int64 application_id = 2;
+ * @return {number}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.getApplicationId = function() {
+  return /** @type {number} */ (jspb.Message.getFieldProto3(this, 2, 0));
+};
+
+
+/** @param {number} value  */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.setApplicationId = function(value) {
+  jspb.Message.setField(this, 2, value);
+};
+
+
+/**
+ * repeated string dev_euis = 3;
+ * If you change this array by adding, removing or replacing elements, or if you
+ * replace the array itself, then you must call the setter to update it.
+ * @return {!Array.<string>}
+ */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.getDevEuisList = function() {
+  return /** @type {!Array.<string>} */ (jspb.Message.getField(this, 3));
+};
+
+
+/** @param {Array.<string>} value  */
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.setDevEuisList = function(value) {
+  jspb.Message.setField(this, 3, value || []);
+};
+
+
+proto.api.AddApplicationDeviceToMulticastGroupRequest.prototype.clearDevEuisList = function() {
+  jspb.Message.setField(this, 3, []);
 };
 
 
